fix register login page connection, index btns align, form error msg

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -78,3 +78,7 @@ img.logo {
   max-height: 200px;
   height: auto;
 }
+
+.search-btn {
+  margin-right: 130px;
+}
